compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_mutual_recursion_unannotated_mismatched_returns.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/mutual_recursion_unannotated_mismatched_returns.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × if branches have different types
   ╭─[tests/fixtures/diagnostics/types/mutual_recursion_unannotated_mismatched_returns.ml:6:3]
 5 │ fn right(n) {
 6 │   if n < 1 { "done" } else { left(n - 1) }
   ·   ───────────────────┬──────────────────
   ·                      ╰── one branch has type `String`, but another branch has type `i64`
 7 │ }
   ╰────
  help: make both branches produce the same type
